--- a/MusicXML/src/main/java/MusicXML/musicXML.fxml
+++ b/MusicXML/src/main/java/MusicXML/musicXML.fxml
@@ -3,14 +3,22 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ListView?>
+<?import javafx.scene.control.Tab?>
+<?import javafx.scene.control.TabPane?>
 <?import javafx.scene.layout.AnchorPane?>
 
 <AnchorPane prefHeight="641.0" prefWidth="1046.0" xmlns="http://javafx.com/javafx/15.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="MusicXML.MainController">
    <children>
-      <Button fx:id="addbtn" layoutX="298.0" layoutY="602.0" mnemonicParsing="false" onAction="#addSongAction" text="Add Song" AnchorPane.bottomAnchor="14.0" />
-      <ListView fx:id="listview" layoutX="14.0" layoutY="35.0" prefHeight="557.0" prefWidth="353.0" AnchorPane.bottomAnchor="49.0" AnchorPane.leftAnchor="14.0" AnchorPane.topAnchor="35.0" />
+      <Button fx:id="addbtn" layoutX="205.0" layoutY="602.0" mnemonicParsing="false" onAction="#addSongAction" text="Add Song" AnchorPane.bottomAnchor="14.0" />
+      <ListView fx:id="listview" layoutX="14.0" layoutY="35.0" prefHeight="557.0" prefWidth="260.0" AnchorPane.bottomAnchor="49.0" AnchorPane.leftAnchor="14.0" AnchorPane.topAnchor="35.0" />
       <Button fx:id="savebtn" layoutX="991.0" layoutY="602.0" mnemonicParsing="false" onAction="#saveAction" text="Save" AnchorPane.bottomAnchor="14.0" AnchorPane.rightAnchor="14.0" />
-      <Button layoutX="234.0" layoutY="602.0" mnemonicParsing="false" text="Convert" AnchorPane.bottomAnchor="14.0" />
+      <Button layoutX="144.0" layoutY="602.0" mnemonicParsing="false" text="Convert" AnchorPane.bottomAnchor="14.0" />
       <Label layoutX="14.0" layoutY="14.0" text="Added:" />
+      <TabPane layoutX="285.0" layoutY="35.0" prefHeight="557.0" prefWidth="747.0" tabClosingPolicy="UNAVAILABLE" AnchorPane.bottomAnchor="49.0" AnchorPane.leftAnchor="285.0" AnchorPane.rightAnchor="14.0" AnchorPane.topAnchor="35.0">
+        <tabs>
+          <Tab text="Text" />
+          <Tab text="XML" />
+        </tabs>
+      </TabPane>
    </children>
 </AnchorPane>
