text field matt

--- a/MusicXML/src/main/java/MusicXML/musicXML.fxml
+++ b/MusicXML/src/main/java/MusicXML/musicXML.fxml
@@ -5,7 +5,6 @@
 <?import javafx.scene.control.ListView?>
 <?import javafx.scene.control.Tab?>
 <?import javafx.scene.control.TabPane?>
-<?import javafx.scene.control.TextArea?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 
@@ -25,7 +24,7 @@
                         <Label layoutX="14.0" layoutY="14.0" prefHeight="25.0" prefWidth="90.0" text="Text File Name:" />
                         <TextField layoutX="117.0" layoutY="14.0" prefHeight="25.0" prefWidth="421.0" />
                         <Label layoutX="15.0" layoutY="56.0" prefHeight="17.0" prefWidth="47.0" text="Content:" />
-                        <TextArea layoutX="17.0" layoutY="82.0" prefHeight="423.0" prefWidth="706.0" AnchorPane.bottomAnchor="24.0" AnchorPane.leftAnchor="17.0" AnchorPane.rightAnchor="24.0" AnchorPane.topAnchor="82.0" />
+                        <TextField layoutX="15.0" layoutY="88.0" prefHeight="425.0" prefWidth="721.0" />
                      </children>
                   </AnchorPane>
                </content></Tab>
