--- a/MusicXML/src/main/java/MusicXML/musicXML.fxml
+++ b/MusicXML/src/main/java/MusicXML/musicXML.fxml
@@ -5,6 +5,7 @@
 <?import javafx.scene.control.ListView?>
 <?import javafx.scene.control.Tab?>
 <?import javafx.scene.control.TabPane?>
+<?import javafx.scene.control.TextArea?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 
@@ -13,7 +14,7 @@
       <Button fx:id="addbtn" layoutX="205.0" layoutY="602.0" mnemonicParsing="false" onAction="#addSongAction" text="Add Song" AnchorPane.bottomAnchor="14.0" />
       <ListView fx:id="listview" layoutX="14.0" layoutY="35.0" prefHeight="557.0" prefWidth="260.0" AnchorPane.bottomAnchor="49.0" AnchorPane.leftAnchor="14.0" AnchorPane.topAnchor="35.0" />
       <Button fx:id="savebtn" layoutX="991.0" layoutY="602.0" mnemonicParsing="false" onAction="#saveAction" text="Save" AnchorPane.bottomAnchor="14.0" AnchorPane.rightAnchor="14.0" />
-      <Button layoutX="144.0" layoutY="602.0" mnemonicParsing="false" text="Convert" AnchorPane.bottomAnchor="14.0" />
+      <Button layoutX="285.0" layoutY="602.0" mnemonicParsing="false" text="Convert" AnchorPane.bottomAnchor="14.0" />
       <Label layoutX="14.0" layoutY="14.0" text="Added:" />
       <TabPane layoutX="285.0" layoutY="35.0" prefHeight="557.0" prefWidth="747.0" tabClosingPolicy="UNAVAILABLE" AnchorPane.bottomAnchor="49.0" AnchorPane.leftAnchor="285.0" AnchorPane.rightAnchor="14.0" AnchorPane.topAnchor="35.0">
         <tabs>
@@ -21,15 +22,16 @@
                <content>
                   <AnchorPane fx:id="details" prefHeight="200.0" prefWidth="200.0">
                      <children>
-                        <Label layoutX="14.0" layoutY="14.0" prefHeight="25.0" prefWidth="90.0" text="Text File Name:" />
-                        <TextField layoutX="117.0" layoutY="14.0" prefHeight="25.0" prefWidth="421.0" />
-                        <Label layoutX="15.0" layoutY="56.0" prefHeight="17.0" prefWidth="47.0" text="Content:" />
-                        <TextField layoutX="15.0" layoutY="88.0" prefHeight="425.0" prefWidth="721.0" />
+                        <Label layoutX="2.0" layoutY="14.0" prefHeight="25.0" prefWidth="90.0" text="Text File Name:" />
+                        <TextField layoutX="92.0" layoutY="14.0" prefHeight="25.0" prefWidth="421.0" />
+                        <Label layoutY="46.0" prefHeight="17.0" prefWidth="47.0" text="Content:" />
+                        <TextArea fx:id="text" layoutY="69.0" prefHeight="461.0" prefWidth="747.0" />
                      </children>
                   </AnchorPane>
                </content></Tab>
           <Tab text="XML" />
         </tabs>
       </TabPane>
+      <Button fx:id="viewbtn" layoutX="160.0" layoutY="602.0" mnemonicParsing="false" onAction="#viewAction" text="View" AnchorPane.bottomAnchor="14.0" />
    </children>
 </AnchorPane>
