--- a/MusicXML/src/main/java/MusicXML/musicXML.fxml
+++ b/MusicXML/src/main/java/MusicXML/musicXML.fxml
@@ -14,7 +14,7 @@
       <Button fx:id="addbtn" layoutX="205.0" layoutY="602.0" mnemonicParsing="false" onAction="#addSongAction" text="Add Song" AnchorPane.bottomAnchor="14.0" />
       <ListView fx:id="listview" layoutX="14.0" layoutY="35.0" prefHeight="557.0" prefWidth="260.0" AnchorPane.bottomAnchor="49.0" AnchorPane.leftAnchor="14.0" AnchorPane.topAnchor="35.0" />
       <Button fx:id="savebtn" layoutX="991.0" layoutY="602.0" mnemonicParsing="false" onAction="#saveAction" text="Save" AnchorPane.bottomAnchor="14.0" AnchorPane.rightAnchor="14.0" />
-      <Button layoutX="285.0" layoutY="602.0" mnemonicParsing="false" text="Convert" AnchorPane.bottomAnchor="14.0" />
+      <Button fx:id="convertbttn" layoutX="285.0" layoutY="602.0" mnemonicParsing="false" onAction="#convertAction" text="Convert" AnchorPane.bottomAnchor="14.0" />
       <Label layoutX="14.0" layoutY="14.0" text="Added:" />
       <TabPane layoutX="285.0" layoutY="35.0" prefHeight="557.0" prefWidth="747.0" tabClosingPolicy="UNAVAILABLE" AnchorPane.bottomAnchor="49.0" AnchorPane.leftAnchor="285.0" AnchorPane.rightAnchor="14.0" AnchorPane.topAnchor="35.0">
         <tabs>
