--- a/MusicXML/src/main/java/MusicXML/musicXML.fxml
+++ b/MusicXML/src/main/java/MusicXML/musicXML.fxml
@@ -16,20 +16,27 @@
       <Button fx:id="savebtn" layoutX="991.0" layoutY="602.0" mnemonicParsing="false" onAction="#saveAction" text="Save" AnchorPane.bottomAnchor="14.0" AnchorPane.rightAnchor="14.0" />
       <Button fx:id="convertbttn" layoutX="285.0" layoutY="602.0" mnemonicParsing="false" onAction="#convertAction" text="Convert" AnchorPane.bottomAnchor="14.0" />
       <Label layoutX="14.0" layoutY="14.0" text="Added:" />
-      <TabPane layoutX="285.0" layoutY="35.0" prefHeight="557.0" prefWidth="747.0" tabClosingPolicy="UNAVAILABLE" AnchorPane.bottomAnchor="49.0" AnchorPane.leftAnchor="285.0" AnchorPane.rightAnchor="14.0" AnchorPane.topAnchor="35.0">
+      <TabPane fx:id="tp" layoutX="285.0" layoutY="35.0" prefHeight="557.0" prefWidth="747.0" tabClosingPolicy="UNAVAILABLE" AnchorPane.bottomAnchor="49.0" AnchorPane.leftAnchor="285.0" AnchorPane.rightAnchor="14.0" AnchorPane.topAnchor="35.0">
         <tabs>
-          <Tab text="Text">
+          <Tab fx:id="txtTab" text="Text">
                <content>
                   <AnchorPane fx:id="details" prefHeight="200.0" prefWidth="200.0">
                      <children>
-                        <Label layoutX="2.0" layoutY="14.0" prefHeight="25.0" prefWidth="90.0" text="Text File Name:" />
-                        <TextField layoutX="92.0" layoutY="14.0" prefHeight="25.0" prefWidth="421.0" />
-                        <Label layoutY="46.0" prefHeight="17.0" prefWidth="47.0" text="Content:" />
-                        <TextArea fx:id="text" layoutY="69.0" prefHeight="461.0" prefWidth="747.0" />
+                        <Label layoutY="14.0" prefHeight="25.0" prefWidth="90.0" text="File Directory:" />
+                        <TextField fx:id="txtPath" layoutX="92.0" layoutY="14.0" prefHeight="25.0" prefWidth="421.0" />
+                        <Label layoutX="1.0" layoutY="46.0" prefHeight="17.0" prefWidth="47.0" text="Content:" />
+                        <TextArea fx:id="txtTextArea" layoutY="69.0" prefHeight="461.0" prefWidth="747.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="67.0" />
                      </children>
                   </AnchorPane>
                </content></Tab>
-          <Tab text="XML" />
+          <Tab text="XML" fx:id="xmlTab">
+               <content>
+                  <AnchorPane prefHeight="200.0" prefWidth="200.0">
+                     <children>
+                        <TextArea prefHeight="529.0" prefWidth="747.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" fx:id="xmlTextArea" />
+                     </children>
+                  </AnchorPane>
+               </content></Tab>
         </tabs>
       </TabPane>
       <Button fx:id="viewbtn" layoutX="160.0" layoutY="602.0" mnemonicParsing="false" onAction="#viewAction" text="View" AnchorPane.bottomAnchor="14.0" />
