--- a/MusicXML/src/main/java/MusicXML/musicXML.fxml
+++ b/MusicXML/src/main/java/MusicXML/musicXML.fxml
@@ -11,41 +11,44 @@
 <?import javafx.scene.text.Font?>
 
 <AnchorPane prefHeight="733.0" prefWidth="1138.0" xmlns="http://javafx.com/javafx/15.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="MusicXML.MainController">
-   <children>
-      <Button fx:id="addbtn" layoutX="158.0" layoutY="602.0" mnemonicParsing="false" onAction="#addSongAction" text="Add Song" AnchorPane.bottomAnchor="14.0" />
-      <Button fx:id="savebtn" layoutX="991.0" layoutY="602.0" mnemonicParsing="false" onAction="#saveAction" text="Save" AnchorPane.bottomAnchor="14.0" AnchorPane.rightAnchor="14.0" />
-      <Button fx:id="convertbttn" layoutX="285.0" layoutY="602.0" mnemonicParsing="false" onAction="#convertAction" text="Convert" AnchorPane.bottomAnchor="14.0" />
-      <Button fx:id="viewbtn" layoutX="232.0" layoutY="602.0" mnemonicParsing="false" onAction="#viewAction" text="View" AnchorPane.bottomAnchor="14.0" />
-      <ListView fx:id="listview" layoutX="14.0" layoutY="35.0" prefHeight="557.0" prefWidth="260.0" AnchorPane.bottomAnchor="49.0" AnchorPane.leftAnchor="14.0" AnchorPane.topAnchor="35.0" />
-      <Label layoutX="14.0" layoutY="14.0" text="Added:" />
-      <TabPane fx:id="tp" layoutX="285.0" layoutY="35.0" prefHeight="557.0" prefWidth="747.0" tabClosingPolicy="UNAVAILABLE" AnchorPane.bottomAnchor="49.0" AnchorPane.leftAnchor="285.0" AnchorPane.rightAnchor="14.0" AnchorPane.topAnchor="35.0">
-        <tabs>
-          <Tab fx:id="txtTab" text="Text">
-               <content>
-                  <AnchorPane fx:id="details" prefHeight="200.0" prefWidth="200.0">
-                     <children>
-                        <Label layoutY="14.0" prefHeight="25.0" prefWidth="90.0" text="File Directory:" />
-                        <TextField fx:id="txtPath" layoutX="82.0" layoutY="14.0" prefHeight="25.0" prefWidth="363.0" AnchorPane.leftAnchor="82.0" AnchorPane.rightAnchor="302.0" />
-                        <Label layoutX="1.0" layoutY="46.0" prefHeight="17.0" prefWidth="47.0" text="Content:" />
-                        <TextArea fx:id="txtTextArea" layoutY="69.0" prefHeight="461.0" prefWidth="747.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="67.0">
-                           <font>
-                              <Font name="Courier New" size="12.0" />
-                           </font></TextArea>
-                        <Label layoutX="541.0" layoutY="18.0" text="Detected:" AnchorPane.rightAnchor="155.0" />
-                        <TextField fx:id="txtDetected" layoutX="598.0" layoutY="14.0" prefHeight="25.0" prefWidth="87.0" AnchorPane.rightAnchor="62.0" />
-                        <Button fx:id="changebttn" layoutX="690.0" layoutY="14.0" mnemonicParsing="false" onAction="#changeAction" text="Change" AnchorPane.rightAnchor="0.0" />
-                     </children>
-                  </AnchorPane>
-               </content></Tab>
-          <Tab text="XML" fx:id="xmlTab">
-               <content>
-                  <AnchorPane prefHeight="200.0" prefWidth="200.0">
-                     <children>
-                        <TextArea prefHeight="529.0" prefWidth="747.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" fx:id="xmlTextArea" />
-                     </children>
-                  </AnchorPane>
-               </content></Tab>
-        </tabs>
-      </TabPane>
-   </children>
+	<children>
+		<Button fx:id="addbtn" layoutX="157.0" layoutY="694.0" mnemonicParsing="false" onAction="#addSongAction" text="Add Song" AnchorPane.bottomAnchor="14.0" />
+		<Button fx:id="savebtn" layoutX="1083.0" layoutY="694.0" mnemonicParsing="false" onAction="#saveAction" text="Save" AnchorPane.bottomAnchor="14.0" AnchorPane.rightAnchor="14.0" />
+		<Button fx:id="convertbttn" layoutX="285.0" layoutY="694.0" mnemonicParsing="false" onAction="#convertAction" text="Convert" AnchorPane.bottomAnchor="14.0" />
+		<Button fx:id="viewbtn" layoutX="232.0" layoutY="694.0" mnemonicParsing="false" onAction="#viewAction" text="View" AnchorPane.bottomAnchor="14.0" />
+		<ListView fx:id="listview" layoutX="14.0" layoutY="35.0" prefHeight="557.0" prefWidth="260.0" AnchorPane.bottomAnchor="49.0" AnchorPane.leftAnchor="14.0" AnchorPane.topAnchor="35.0" />
+		<Label layoutX="14.0" layoutY="14.0" text="Added:" />
+		<TabPane fx:id="tp" layoutX="285.0" layoutY="35.0" prefHeight="557.0" prefWidth="747.0" tabClosingPolicy="UNAVAILABLE" AnchorPane.bottomAnchor="49.0" AnchorPane.leftAnchor="285.0" AnchorPane.rightAnchor="14.0" AnchorPane.topAnchor="35.0">
+			<tabs>
+				<Tab fx:id="txtTab" text="Text">
+					<content>
+						<AnchorPane prefHeight="200.0" prefWidth="200.0">
+							<children>
+								<Label layoutY="14.0" prefHeight="25.0" prefWidth="90.0" text="File Directory:" />
+								<TextField fx:id="txtPath" layoutX="82.0" layoutY="14.0" prefHeight="25.0" prefWidth="363.0" AnchorPane.leftAnchor="82.0" AnchorPane.rightAnchor="302.0" />
+								<Label layoutX="1.0" layoutY="46.0" prefHeight="17.0" prefWidth="47.0" text="Content:" />
+								<TextArea fx:id="txtTextArea" layoutY="69.0" prefHeight="461.0" prefWidth="747.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="67.0">
+									<font>
+										<Font name="Courier New" size="12.0" />
+									</font>
+								</TextArea>
+								<Label layoutX="541.0" layoutY="18.0" text="Detected:" AnchorPane.rightAnchor="155.0" />
+								<TextField fx:id="txtDetected" layoutX="598.0" layoutY="14.0" prefHeight="25.0" prefWidth="87.0" AnchorPane.rightAnchor="62.0" />
+								<Button fx:id="changebttn" layoutX="782.0" layoutY="14.0" mnemonicParsing="false" onAction="#changeAction" text="Change" AnchorPane.rightAnchor="0.0" />
+							</children>
+						</AnchorPane>
+					</content>
+				</Tab>
+				<Tab text="XML" fx:id="xmlTab">
+					<content>
+						<AnchorPane prefHeight="200.0" prefWidth="200.0">
+							<children>
+								<TextArea prefHeight="529.0" prefWidth="747.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" fx:id="xmlTextArea" />
+							</children>
+						</AnchorPane>
+					</content>
+				</Tab>
+			</tabs>
+		</TabPane>
+	</children>
 </AnchorPane>
