--- a/MusicXML/src/main/java/MusicXML/musicXML.fxml
+++ b/MusicXML/src/main/java/MusicXML/musicXML.fxml
@@ -8,13 +8,14 @@
 <?import javafx.scene.control.TextArea?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.text.Font?>
 
 <AnchorPane prefHeight="641.0" prefWidth="1046.0" xmlns="http://javafx.com/javafx/15.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="MusicXML.MainController">
    <children>
-      <Button fx:id="addbtn" layoutX="205.0" layoutY="602.0" mnemonicParsing="false" onAction="#addSongAction" text="Add Song" AnchorPane.bottomAnchor="14.0" />
+      <Button fx:id="addbtn" layoutX="13.0" layoutY="600.0" mnemonicParsing="false" onAction="#addSongAction" text="Add Song" AnchorPane.bottomAnchor="14.0" />
       <ListView fx:id="listview" layoutX="14.0" layoutY="35.0" prefHeight="557.0" prefWidth="260.0" AnchorPane.bottomAnchor="49.0" AnchorPane.leftAnchor="14.0" AnchorPane.topAnchor="35.0" />
       <Button fx:id="savebtn" layoutX="991.0" layoutY="602.0" mnemonicParsing="false" onAction="#saveAction" text="Save" AnchorPane.bottomAnchor="14.0" AnchorPane.rightAnchor="14.0" />
-      <Button fx:id="convertbttn" layoutX="285.0" layoutY="602.0" mnemonicParsing="false" onAction="#convertAction" text="Convert" AnchorPane.bottomAnchor="14.0" />
+      <Button fx:id="convertbttn" layoutX="285.0" layoutY="600.0" mnemonicParsing="false" onAction="#convertAction" text="Convert" AnchorPane.bottomAnchor="14.0" />
       <Label layoutX="14.0" layoutY="14.0" text="Added:" />
       <TabPane fx:id="tp" layoutX="285.0" layoutY="35.0" prefHeight="557.0" prefWidth="747.0" tabClosingPolicy="UNAVAILABLE" AnchorPane.bottomAnchor="49.0" AnchorPane.leftAnchor="285.0" AnchorPane.rightAnchor="14.0" AnchorPane.topAnchor="35.0">
         <tabs>
@@ -23,9 +24,15 @@
                   <AnchorPane fx:id="details" prefHeight="200.0" prefWidth="200.0">
                      <children>
                         <Label layoutY="14.0" prefHeight="25.0" prefWidth="90.0" text="File Directory:" />
-                        <TextField fx:id="txtPath" layoutX="92.0" layoutY="14.0" prefHeight="25.0" prefWidth="421.0" />
-                        <Label layoutX="1.0" layoutY="46.0" prefHeight="17.0" prefWidth="47.0" text="Content:" />
-                        <TextArea fx:id="txtTextArea" layoutY="69.0" prefHeight="461.0" prefWidth="747.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="67.0" />
+                        <TextField fx:id="txtPath" layoutX="81.0" layoutY="14.0" prefHeight="27.0" prefWidth="379.0" />
+                        <Label layoutX="1.0" layoutY="46.0" prefHeight="17.0" prefWidth="59.0" text="Content:" />
+                        <TextArea fx:id="txtTextArea" layoutY="69.0" prefHeight="461.0" prefWidth="747.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="67.0">
+                           <font>
+                              <Font name="Courier" size="13.0" />
+                           </font></TextArea>
+                        <Label layoutX="485.0" layoutY="19.0" text="Detected:" />
+                        <TextField layoutX="547.0" layoutY="14.0" prefHeight="27.0" prefWidth="108.0" />
+                        <Button layoutX="668.0" layoutY="14.0" mnemonicParsing="false" text="Change" />
                      </children>
                   </AnchorPane>
                </content></Tab>
@@ -39,6 +46,6 @@
                </content></Tab>
         </tabs>
       </TabPane>
-      <Button fx:id="viewbtn" layoutX="160.0" layoutY="602.0" mnemonicParsing="false" onAction="#viewAction" text="View" AnchorPane.bottomAnchor="14.0" />
+      <Button fx:id="viewbtn" layoutX="223.0" layoutY="600.0" mnemonicParsing="false" onAction="#viewAction" prefHeight="22.0" prefWidth="51.0" text="View" AnchorPane.bottomAnchor="14.0" />
    </children>
 </AnchorPane>
