--- a/MusicXML/src/main/java/MusicXML/musicXML.fxml
+++ b/MusicXML/src/main/java/MusicXML/musicXML.fxml
@@ -14,7 +14,7 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="733.0" prefWidth="1138.0" style="-fx-background-color: #212832; -fx-background-image: #ffffff;" xmlns="http://javafx.com/javafx/15.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="MusicXML.MainController">
+<AnchorPane prefHeight="733.0" prefWidth="1138.0" style="-fx-background-color: #212832;" xmlns="http://javafx.com/javafx/15.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="MusicXML.MainController">
 	<children>
 		<Button fx:id="addbtn" layoutX="156.0" layoutY="694.0" mnemonicParsing="false" onAction="#addSongAction" text="Add Song" AnchorPane.bottomAnchor="14.0" />
 		<Button fx:id="savebtn" layoutX="1083.0" layoutY="694.0" mnemonicParsing="false" onAction="#saveAction" text="Save" AnchorPane.bottomAnchor="14.0" AnchorPane.rightAnchor="14.0" />
@@ -22,7 +22,7 @@
 		<Button fx:id="viewbtn" layoutX="232.0" layoutY="694.0" mnemonicParsing="false" onAction="#viewAction" text="View" AnchorPane.bottomAnchor="14.0" />
 		<ListView fx:id="listview" blendMode="ADD" layoutX="14.0" layoutY="135.0" prefHeight="549.0" prefWidth="260.0" style="-fx-background-radius: 5px;" AnchorPane.bottomAnchor="49.0" AnchorPane.leftAnchor="14.0" AnchorPane.topAnchor="135.0" />
 		<Label layoutX="18.0" layoutY="106.0" text="Added:" textFill="WHITE" />
-		<TabPane fx:id="tp" layoutX="285.0" layoutY="35.0" prefHeight="557.0" prefWidth="747.0" style="-fx-background-color: #212832; -fx-region-background: #212832; -fx-border-color: #212832; -fx-skin: #212832;" tabClosingPolicy="UNAVAILABLE" AnchorPane.bottomAnchor="49.0" AnchorPane.leftAnchor="285.0" AnchorPane.rightAnchor="14.0" AnchorPane.topAnchor="35.0">
+		<TabPane fx:id="tp" layoutX="285.0" layoutY="35.0" prefHeight="557.0" prefWidth="747.0" style="-fx-background-color: #212832;" tabClosingPolicy="UNAVAILABLE" AnchorPane.bottomAnchor="49.0" AnchorPane.leftAnchor="285.0" AnchorPane.rightAnchor="14.0" AnchorPane.topAnchor="35.0">
 			<tabs>
 				<Tab fx:id="txtTab" text="Text">
 					<content>
